<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Database</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="user">User</string>
    <string name="pass">Pass</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="display">Display</string>
    <string name="delete">Delete</string>

</resources>